--- a/test/fixtures/todos.yml
+++ b/test/fixtures/todos.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
-  email: MyString
-  age: 1
+  tasks: MyString
+  finished: false
 
 two:
-  username: MyString
-  email: MyString
-  age: 1
+  tasks: MyString
+  finished: false
